; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/camera/extr_msm_vfe8x_proc.c_vfe_frame_skip_update.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/camera/extr_msm_vfe8x_proc.c_vfe_frame_skip_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }
%struct.vfe_cmd_frame_skip_update = type { i32, i32 }
%struct.VFE_FRAME_SKIP_UpdateCmdType = type { i32, i32 }

@ctrl = common dso_local global %struct.TYPE_2__* null, align 8
@VFE_FRAMEDROP_VIEW_Y_PATTERN = common dso_local global i64 0, align 8
@VFE_FRAMEDROP_ENC_Y_PATTERN = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vfe_frame_skip_update(%struct.vfe_cmd_frame_skip_update* %0) #0 {
  %2 = alloca %struct.vfe_cmd_frame_skip_update*, align 8
  %3 = alloca %struct.VFE_FRAME_SKIP_UpdateCmdType, align 4
  store %struct.vfe_cmd_frame_skip_update* %0, %struct.vfe_cmd_frame_skip_update** %2, align 8
  %4 = load %struct.vfe_cmd_frame_skip_update*, %struct.vfe_cmd_frame_skip_update** %2, align 8
  %5 = getelementptr inbounds %struct.vfe_cmd_frame_skip_update, %struct.vfe_cmd_frame_skip_update* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 4
  %7 = getelementptr inbounds %struct.VFE_FRAME_SKIP_UpdateCmdType, %struct.VFE_FRAME_SKIP_UpdateCmdType* %3, i32 0, i32 1
  store i32 %6, i32* %7, align 4
  %8 = load %struct.vfe_cmd_frame_skip_update*, %struct.vfe_cmd_frame_skip_update** %2, align 8
  %9 = getelementptr inbounds %struct.vfe_cmd_frame_skip_update, %struct.vfe_cmd_frame_skip_update* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = getelementptr inbounds %struct.VFE_FRAME_SKIP_UpdateCmdType, %struct.VFE_FRAME_SKIP_UpdateCmdType* %3, i32 0, i32 0
  store i32 %10, i32* %11, align 4
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ctrl, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @VFE_FRAMEDROP_VIEW_Y_PATTERN, align 8
  %16 = add nsw i64 %14, %15
  %17 = bitcast %struct.VFE_FRAME_SKIP_UpdateCmdType* %3 to i32*
  %18 = call i32 @vfe_prog_hw(i64 %16, i32* %17, i32 8)
  %19 = load %struct.vfe_cmd_frame_skip_update*, %struct.vfe_cmd_frame_skip_update** %2, align 8
  %20 = getelementptr inbounds %struct.vfe_cmd_frame_skip_update, %struct.vfe_cmd_frame_skip_update* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = getelementptr inbounds %struct.VFE_FRAME_SKIP_UpdateCmdType, %struct.VFE_FRAME_SKIP_UpdateCmdType* %3, i32 0, i32 1
  store i32 %21, i32* %22, align 4
  %23 = load %struct.vfe_cmd_frame_skip_update*, %struct.vfe_cmd_frame_skip_update** %2, align 8
  %24 = getelementptr inbounds %struct.vfe_cmd_frame_skip_update, %struct.vfe_cmd_frame_skip_update* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = getelementptr inbounds %struct.VFE_FRAME_SKIP_UpdateCmdType, %struct.VFE_FRAME_SKIP_UpdateCmdType* %3, i32 0, i32 0
  store i32 %25, i32* %26, align 4
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ctrl, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = load i64, i64* @VFE_FRAMEDROP_ENC_Y_PATTERN, align 8
  %31 = add nsw i64 %29, %30
  %32 = bitcast %struct.VFE_FRAME_SKIP_UpdateCmdType* %3 to i32*
  %33 = call i32 @vfe_prog_hw(i64 %31, i32* %32, i32 8)
  ret void
}

declare dso_local i32 @vfe_prog_hw(i64, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
